Add onTouchListener to left bottom rotation button and change text

--- a/app/src/main/res/layout/widget_lasso_frame.xml
+++ b/app/src/main/res/layout/widget_lasso_frame.xml
@@ -18,7 +18,7 @@
     <Button
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:text="X"
+        android:text="S"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -30,7 +30,7 @@
     <Button
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:text="X"
+        android:text="R"
         android:id="@+id/button_rotate_right_top"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -42,7 +42,7 @@
     <Button
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:text="X"
+        android:text="R"
         android:id="@+id/button_rotate_left_bottom"
         android:layout_alignParentTop="false"
         android:layout_alignParentLeft="true"
@@ -55,7 +55,7 @@
     <Button
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:text="X"
+        android:text="S"
         android:id="@+id/button_scale_right_bottom"
         android:layout_alignParentTop="false"
         android:layout_alignParentRight="true"
