--- a/app/src/main/res/drawable/lasso_frame_bolder.xml
+++ b/app/src/main/res/drawable/lasso_frame_bolder.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="1dp"
-        android:dashWidth="2dp"
-        android:dashGap="2dp"
+        android:width="5px"
+        android:dashWidth="20px"
+        android:dashGap="20px"
         android:color="#FF0000"/>
 </shape>
